src/objects/Checklist_Versionaire__c.object
<CustomObject>
    <fields>
        <fullName>Checklist_Item_Id__c</fullName>
        <label>Checklist Item ID</label>
        <referenceTo>Checklist_Item__c</referenceTo>
        <relationshipName>Checklist_Versionaires</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Checklist_Version_Id__c</fullName>
        <label>Checklist Version Id</label>
        <referenceTo>Checklist_Version__c</referenceTo>
        <relationshipName>Checklist_Versionaires</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Sequence_text__c</fullName>
        <description>Checking Sequence uniqueness for Checklists Items in a Checklist Master.</description>
        <label>Unique Sequence text</label>
        <length>165</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Checklist Master Item</label>
    <nameField>
        <displayFormat>CCV-{0000}</displayFormat>
        <label>Master Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Master Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>